--- a/src/Layouts/index.css
+++ b/src/Layouts/index.css
@@ -1,12 +1,31 @@
 
 .my-container {
-  border: 1px solid
+  border: 1px solid;
+  height: 100%;
 }
 .my-container-top {
   width: 100%;
   height: 40px;
   line-height: 40px;
+  background: darkgrey;
+  color: #fff;
 }
 .my-container-main {
-  
+  display: flex;
+  height: 100%;
+}
+.my-container-silder {
+  width: 200px;
+  float: left;
+  color: #fff;
+  height: 100%;
+  margin-bottom: -3000px;
+  padding-bottom: 3000px;
+  background: #001529;
+  overflow: hidden;
+}
+.my-container-content {
+  float: left;
+  background: #ccc;
+  width: 100%
 }
